Product Page backend done

--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -6,7 +6,7 @@
 }
 
 .color-primary-bg {
-  color: #003859;
+  background: #003859;
 }
 
 .color-second {
@@ -22,7 +22,7 @@
 }
 
 .color-yellow-bg {
-  color: #FFD289;
+  background: #FFD289;
 }
 
 /* global classes */
