--- a/Frontend/sass/include/color.scss
+++ b/Frontend/sass/include/color.scss
@@ -4,7 +4,7 @@
    }
 
    .color-primary-bg{
-    color: $color-primary;
+    background: $color-primary;
    }
 
    .color-second{
@@ -20,5 +20,5 @@
    }
 
    .color-yellow-bg{
-    color: $color-yellow;
+    background: $color-yellow;
    }
